--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
   "name": "wikiquote-cli",
   "version": "0.0.0",
-  "description": "",
+  "description": "Companion CLI for wikiquote package",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint *.js && nyc ./node_modules/.bin/mocha --opts mocha.opts test.js"
   },
-  "author": "",
   "license": "MIT",
+  "author": {
+    "name": "Forrest Desjardins",
+    "email": "desjardinsfg@gmail.com",
+    "url": "github.com/fdesjardins"
+  },
+  "engines": {
+    "node": ">=7"
+  },
+  "keywords": [
+    "quotes",
+    "wikiquote",
+    "proverbs",
+    "sayings",
+    "excerpts",
+    "wikimedia",
+    "cli",
+    "command line",
+    "terminal",
+    "fortune"
+  ],
   "dependencies": {
-    "wikiquote": "0.0.0",
+    "wikiquote": "0.0.1",
     "yargs": "^7.0.2"
   },
   "devDependencies": {
@@ -20,5 +39,11 @@
     "eslint-plugin-standard": "^2.1.1",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2"
+  },
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text"
+    ]
   }
 }
