--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikiquote-cli",
-  "version": "0.1.16",
+  "version": "0.1.11",
   "description": "Companion CLI for wikiquote package",
   "main": "index.js",
   "scripts": {
@@ -27,21 +27,18 @@
     "terminal",
     "fortune"
   ],
-  "bin": "index.js",
+  "bin": {
+    "wikiquote": "./index.js"
+  },
   "dependencies": {
     "wikiquote": "0.1.5",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "eslint": "^4.8.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
     "mocha": "^4.0.1",
-    "nyc": "^11.2.1"
+    "nyc": "^11.4.1",
+    "standard": "^10.0.3"
   },
   "nyc": {
     "reporter": [
