--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "wikiquote": "./index.js"
   },
   "dependencies": {
+    "recache": "^0.4.3-0",
     "wikiquote": "0.1.5",
     "yargs": "^10.0.3"
   },
