--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Companion CLI for wikiquote package",
   "main": "index.js",
   "scripts": {
-    "test": "eslint *.js && nyc ./node_modules/.bin/mocha --opts mocha.opts test.js"
+    "test": "./node_modules/.bin/standard *.js && nyc ./node_modules/.bin/mocha --opts mocha.opts test.js"
   },
   "license": "MIT",
   "author": {
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "mocha": "^4.0.1",
     "nyc": "^11.4.1",
     "standard": "^10.0.3"
