--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "./node_modules/.bin/standard *.js && nyc ./node_modules/.bin/mocha --opts mocha.opts test.js"
   },
   "license": "MIT",
+  "repository": "fdesjardins/wikiquote-cli",
   "author": {
     "name": "Forrest Desjardins",
     "email": "desjardinsfg@gmail.com",
@@ -32,7 +33,7 @@
   },
   "dependencies": {
     "recache": "^0.4.3-0",
-    "wikiquote": "0.1.5",
+    "wikiquote": "0.2.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
