--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Companion CLI for wikiquote package",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/standard *.js && nyc ./node_modules/.bin/mocha --opts mocha.opts test.js --timeout 5000"
+    "test": "./node_modules/.bin/standard *.js && nyc ./node_modules/.bin/mocha --opts mocha.opts test/**/*-spec.js --timeout 10000"
   },
   "license": "MIT",
   "repository": "fdesjardins/wikiquote-cli",
@@ -32,14 +32,13 @@
     "wikiquote": "./index.js"
   },
   "dependencies": {
-    "recache": "^0.4.3-0",
-    "wikiquote": "0.4.0",
+    "wikiquote": "0.4.1",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "nyc": "^11.4.1",
     "standard": "^10.0.3"
   },
