--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Companion CLI for wikiquote package",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/standard *.js && nyc ./node_modules/.bin/mocha --opts mocha.opts test/**/*-spec.js --timeout 10000"
+    "test": "standard *.js && nyc mocha test/**/*-spec.js --timeout 10000"
   },
   "license": "MIT",
   "repository": "fdesjardins/wikiquote-cli",
@@ -32,15 +32,15 @@
     "wikiquote": "./index.js"
   },
   "dependencies": {
-    "wikiquote": "0.4.5",
-    "yargs": "^12.0.1"
+    "wikiquote": "0.4.6",
+    "yargs": "^13.2.1"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "coveralls": "^3.0.2",
-    "mocha": "^5.2.0",
-    "nyc": "^12.0.2",
-    "standard": "^11.0.1"
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.3",
+    "mocha": "^6.0.1",
+    "nyc": "^13.3.0",
+    "standard": "^12.0.1"
   },
   "nyc": {
     "reporter": [
