--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
   "name": "wikiquote-cli",
-  "version": "1.2.5",
   "description": "Companion CLI for wikiquote package",
-  "main": "index.js",
-  "scripts": {
-    "test": "standard *.js && nyc mocha test/**/*-spec.js --timeout 10000"
-  },
-  "license": "MIT",
-  "repository": "fdesjardins/wikiquote-cli",
+  "version": "1.2.5",
   "author": {
     "name": "Forrest Desjardins",
     "email": "desjardinsfg@gmail.com",
     "url": "github.com/fdesjardins"
   },
-  "engines": {
-    "node": ">=7"
-  },
-  "keywords": [
-    "quotes",
-    "wikiquote",
-    "proverbs",
-    "sayings",
-    "excerpts",
-    "wikimedia",
-    "cli",
-    "command line",
-    "terminal",
-    "fortune"
-  ],
   "bin": {
     "wikiquote": "./index.js"
   },
   "dependencies": {
-    "wikiquote": "0.4.6",
-    "yargs": "^13.2.1"
+    "wikiquote": "0.4.7",
+    "yargs": "^13.2.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
-    "mocha": "^6.0.1",
-    "nyc": "^13.3.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.0",
     "standard": "^12.0.1"
   },
+  "engines": {
+    "node": ">=7"
+  },
+  "homepage": "https://github.com/fdesjardins/wikiquote-cli",
+  "keywords": [
+    "cli",
+    "command line",
+    "excerpts",
+    "fortune",
+    "proverbs",
+    "quotes",
+    "sayings",
+    "terminal",
+    "wikimedia",
+    "wikiquote"
+  ],
+  "license": "MIT",
+  "main": "index.js",
   "nyc": {
     "reporter": [
       "lcov",
       "text"
     ]
+  },
+  "repository": "fdesjardins/wikiquote-cli",
+  "scripts": {
+    "test": "standard *.js && nyc mocha test/**/*-spec.js --timeout 10000"
   }
 }
